// ============================================
// Proxify B2B Client Database Schema
// ============================================
// Use https://dbdiagram.io to visualize this schema

Project proxify_b2b {
  database_type: 'PostgreSQL'
  Note: 'Proxify B2B Platform - Product Owner & End-User Management with Index-Based Yield Accounting'
}

// ============================================
// 1. CLIENT ORGANIZATIONS (Product Owners)
// ============================================
Table client_organizations {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Organization Info
  product_id varchar(255) [unique, not null, note: 'Unique product identifier']
  company_name varchar(255) [not null]
  business_type varchar(100) [not null, note: 'ecommerce, streaming, gaming, freelance, saas, other']
  description text
  website_url text
  
  // Privy Integration
  wallet_type varchar(20) [not null, note: 'custodial | non-custodial']
  wallet_managed_by varchar(20) [not null, note: 'proxify | client']
  privy_organization_id varchar(255) [unique, not null]
  privy_wallet_address varchar(66) [unique, not null, note: 'Master wallet for client operations']
  
  // API Credentials
  api_key_hash varchar(255) [unique, not null]
  api_key_prefix varchar(20) [not null, note: 'e.g., pk_live_abc...']
  webhook_urls text[] [default: '{}', note: 'List of webhook endpoints']
  webhook_secret varchar(255) [note: 'For HMAC signature verification']
  
  // Strategy & Yield Distribution
  custom_strategy jsonb [note: 'Custom allocation strategy: {placing_lp: 40%, defi_lending: 50%, arbitrage: 10%}']
  end_user_yield_portion numeric(5,2) [note: 'Percentage of yield given to end users (e.g., 90.00)']
  
  // Status
  is_active boolean [default: true]
  is_sandbox boolean [default: false, note: 'Sandbox mode for testing']
  
  // Billing
  platform_fee numeric(5,2) [note: '0.7–1.5% of AUM (Assets Under Management)']
  performance_fee numeric(5,2) [default: 10.00, note: 'Performance fee percentage (default 10%)']
  
  // Timestamps
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    product_id [name: 'idx_client_orgs_product_id']
    privy_organization_id [name: 'idx_client_orgs_privy_org']
    (is_active) [name: 'idx_client_orgs_active', note: 'Partial index: WHERE is_active = true']
  }
  
  Note: 'Product owners (clients) who integrate Proxify into their platforms'
}

// ============================================
// 2. END-USERS
// ============================================
Table end_users {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Relationships
  client_id uuid [not null, ref: > client_organizations.id]
  user_id varchar(255) [not null, note: 'Client internal user ID']
  
  // User Type & Wallet
  user_type varchar(20) [not null, note: 'custodial | non-custodial']
  user_wallet_address varchar(66) [note: 'Optional: user own wallet address if non-custodial']
  
  // Status
  is_active boolean [default: true]
  
  // Timestamps
  first_deposit_at timestamptz [default: `now()`]
  last_deposit_at timestamptz [default: `now()`]
  last_withdrawal_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    client_id [name: 'idx_end_users_client']
    user_id [name: 'idx_end_users_user']
    (client_id, user_id) [unique, name: 'unique_client_user']
    (is_active) [name: 'idx_end_users_active', note: 'Partial index: WHERE is_active = true']
  }
  
  Note: 'End-users who deposit funds through client platforms'
}

// ============================================
// 3. END-USER VAULTS (Multi-chain, Multi-token)
// ============================================
Table end_user_vaults {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Relationships
  end_user_id uuid [not null, ref: > end_users.id]
  client_id uuid [not null, ref: > client_organizations.id]
  
  // Chain & Token
  chain varchar(50) [not null, note: 'ethereum, base, polygon, arbitrum, etc.']
  token_address varchar(66) [not null, note: 'ERC20 token contract address']
  token_symbol varchar(20) [not null, note: 'USDC, USDT, DAI, etc.']
  
  // Scaled Balance & Index (using 1e18 precision for accurate calculations)
  balance numeric(78,0) [not null, default: 0, note: 'Scaled integer balance (multiply by 1e18)']
  entry_index numeric(78,0) [not null, note: 'Index at deposit time (scaled by 1e18). Actual value = (balance × currentIndex) / entryIndex']
  
  // Status
  is_active boolean [default: true]
  
  // Timestamps
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    end_user_id [name: 'idx_euv_end_user']
    client_id [name: 'idx_euv_client']
    (end_user_id, chain, token_address) [unique, name: 'unique_user_chain_token']
    (is_active) [name: 'idx_euv_active', note: 'Partial index: WHERE is_active = true']
  }
  
  Note: 'Tracks each user balance per token per chain using index-based accounting'
}

// ============================================
// 4. CLIENT VAULTS (Per-token, Per-chain Index Tracking)
// ============================================
Table client_vaults {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Relationships
  client_id uuid [not null, ref: > client_organizations.id]
  
  // Chain & Token
  chain varchar(50) [not null, note: 'ethereum, base, polygon, arbitrum, etc.']
  token_address varchar(66) [not null, note: 'ERC20 token contract address']
  token_symbol varchar(20) [not null, note: 'USDC, USDT, DAI, etc.']
  
  // Yield Index (scaled by 1e18, starts at 1.0 = 1000000000000000000)
  current_index numeric(78,0) [not null, default: `1000000000000000000`, note: 'Current yield index scaled by 1e18. Starts at 1.0, increases with yield']
  
  // Vault Metrics (scaled by 1e18)
  total_deposits numeric(78,0) [default: 0, note: 'Total deposits in vault (scaled)']
  total_value numeric(78,0) [default: 0, note: 'Current total value including yield (scaled)']
  total_yield_earned numeric(78,0) [default: 0, note: 'Cumulative yield earned (scaled)']
  
  // Performance Metrics
  apy_current numeric(10,4) [default: 0, note: 'Current APY percentage']
  apy_7d numeric(10,4) [default: 0, note: '7-day average APY']
  apy_30d numeric(10,4) [default: 0, note: '30-day average APY']
  
  // Timestamps
  last_updated_at timestamptz [default: `now()`]
  created_at timestamptz [default: `now()`]
  
  indexes {
    client_id [name: 'idx_client_vaults_client']
    (client_id, chain, token_address) [unique, name: 'unique_client_vault_token']
    last_updated_at [name: 'idx_client_vaults_updated']
  }
  
  Note: 'Tracks yield index per client per token per chain. Used to calculate user actual values.'
}

// ============================================
// 5. CLIENT PREPAID BALANCES
// ============================================
Table client_balances {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Relationships
  client_id uuid [unique, not null, ref: - client_organizations.id]
  
  // Balance Tracking
  available decimal(20,6) [default: 0, note: 'Available for internal transfers']
  reserved decimal(20,6) [default: 0, note: 'Reserved for pending operations']
  total decimal(20,6) [note: 'Generated column: available + reserved']
  
  // Currency
  currency varchar(10) [default: 'USD']
  
  // Timestamps
  last_topup_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    (available) [name: 'idx_client_balances_available', note: 'Partial index: WHERE available > 0']
  }
  
  Note: 'Prepaid balances for instant internal transfers (client pays upfront)'
}

// ============================================
// 6. SUPPORTED DEFI PROTOCOLS (Reference Table)
// ============================================
Table supported_defi_protocols {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Protocol Info
  name varchar(50) [not null, note: 'AAVE, Pendle, Curve, Compound, Uniswap, etc.']
  chain varchar(50) [not null, note: 'ethereum, base, polygon, arbitrum, etc.']
  
  // Contract Addresses
  address_book jsonb [not null, note: 'Protocol addresses: {pool: 0x..., router: 0x..., wrapped_usdt: 0x..., wrapped_usdc: 0x..., reward_distributor: 0x...}']
  
  // Classification
  category varchar(50) [not null, note: 'Lending | LP | RealYield | Arbitrage']
  risk_level varchar(20) [not null, note: 'low | medium | high']
  
  // Status
  is_active boolean [default: true]
  
  // Timestamps
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    name [name: 'idx_sdp_name']
    chain [name: 'idx_sdp_chain']
    category [name: 'idx_sdp_category']
    (name, chain) [unique, name: 'unique_protocol_chain']
    (is_active) [name: 'idx_sdp_active', note: 'Partial index: WHERE is_active = true']
  }
  
  Note: 'Reference table for supported DeFi protocol integrations across chains'
}

// ============================================
// 7. DEFI ALLOCATIONS (Strategy Deployments)
// ============================================
Table defi_allocations {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Relationships
  client_id uuid [not null, ref: > client_organizations.id]
  client_vault_id uuid [not null, ref: > client_vaults.id, note: 'Links to specific vault (client + chain + token)']
  protocol_id uuid [not null, ref: > supported_defi_protocols.id]
  
  // Strategy Info
  strategy varchar(50) [not null, note: 'Placing LP | DeFi Lending | Arbitrage']
  
  // Chain & Token (must match client_vault)
  chain varchar(50) [not null, note: 'Must match client_vault.chain']
  token_address varchar(66) [not null, note: 'Must match client_vault.token_address']
  token_symbol varchar(20) [not null, note: 'USDC, USDT, DAI, etc.']
  
  // Allocation Details (scaled by 1e18)
  balance numeric(78,0) [not null, default: 0, note: 'Current balance deployed (scaled)']
  percentage_allocation numeric(5,2) [not null, note: 'Percentage of vault allocated to this protocol']
  
  // Performance
  apy numeric(10,4) [note: 'Current APY from protocol']
  yield_earned numeric(78,0) [default: 0, note: 'Cumulative yield earned (scaled)']
  
  // Transaction Details
  tx_hash varchar(66) [note: 'Deployment transaction hash']
  
  // Status
  status varchar(50) [default: 'active', note: 'active | withdrawn | rebalancing']
  
  // Timestamps
  deployed_at timestamptz [default: `now()`]
  last_rebalance_at timestamptz
  withdrawn_at timestamptz
  created_at timestamptz [default: `now()`]
  
  indexes {
    client_id [name: 'idx_defi_alloc_client']
    client_vault_id [name: 'idx_defi_alloc_vault']
    protocol_id [name: 'idx_defi_alloc_protocol']
    (client_vault_id, protocol_id) [name: 'idx_defi_alloc_vault_protocol']
    (status) [name: 'idx_defi_alloc_status', note: 'Partial index: WHERE status = active']
    (chain, token_address) [name: 'idx_defi_alloc_chain_token']
  }
  
  Note: 'Tracks fund allocations to DeFi protocols. Each allocation is for a specific client_vault (client + chain + token) and protocol.'
}

// ============================================
// 8. DEPOSIT TRANSACTIONS
// ============================================
Table deposit_transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Order Info
  order_id varchar(100) [unique, not null]
  
  // Relationships
  client_id uuid [not null, ref: > client_organizations.id]
  user_id varchar(255) [not null]
  
  // Type & Method
  deposit_type varchar(50) [not null, note: 'external | internal']
  payment_method varchar(50) [note: 'apple_pay | card | bank_transfer | internal_balance']
  
  // Amounts
  fiat_amount decimal(20,6) [not null]
  crypto_amount decimal(20,6)
  currency varchar(10) [default: 'USD']
  crypto_currency varchar(10) [default: 'USDC']
  
  // Fees (external deposits only)
  gateway_fee decimal(20,6) [default: 0]
  proxify_fee decimal(20,6) [default: 0]
  network_fee decimal(20,6) [default: 0]
  total_fees decimal(20,6) [default: 0]
  
  // Status
  status varchar(50) [default: 'pending', note: 'pending | awaiting_payment | processing | completed | failed | expired | cancelled | instant_completed']
  
  // External Payment Details
  payment_url text
  gateway_order_id varchar(255) [note: 'Transak/MoonPay/Privy order ID']
  
  // Internal Transfer Details
  client_balance_id uuid [ref: > client_balances.id]
  deducted_from_client decimal(20,6)
  
  // Wallet
  wallet_address varchar(66)
  
  // Timestamps
  created_at timestamptz [default: `now()`]
  completed_at timestamptz
  failed_at timestamptz
  expires_at timestamptz
  
  // Error Tracking
  error_message text
  error_code varchar(100)
  
  indexes {
    order_id [name: 'idx_deposit_txs_order_id']
    client_id [name: 'idx_deposit_txs_client']
    user_id [name: 'idx_deposit_txs_user']
    status [name: 'idx_deposit_txs_status']
    created_at [name: 'idx_deposit_txs_created']
  }
  
  Note: 'Complete deposit transaction history (external via payment gateway, internal via client balance)'
}

// ============================================
// 9. WITHDRAWAL TRANSACTIONS
// ============================================
Table withdrawal_transactions {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Order Info
  order_id varchar(100) [unique, not null]
  
  // Relationships
  client_id uuid [not null, ref: > client_organizations.id]
  user_id varchar(255) [not null]
  
  // Amounts
  requested_amount decimal(20,6) [not null]
  actual_amount decimal(20,6) [note: 'After fees']
  currency varchar(10) [default: 'USD']
  
  // Fees
  withdrawal_fee decimal(20,6) [default: 0]
  network_fee decimal(20,6) [default: 0]
  
  // Destination
  destination_type varchar(50) [not null, note: 'client_balance | bank_account | debit_card | crypto_wallet']
  destination_details jsonb [note: 'Destination-specific information']
  
  // Status
  status varchar(50) [default: 'pending', note: 'pending | processing | completed | failed | cancelled']
  
  // Timestamps
  created_at timestamptz [default: `now()`]
  completed_at timestamptz
  failed_at timestamptz
  
  // Error Tracking
  error_message text
  error_code varchar(100)
  
  indexes {
    client_id [name: 'idx_withdrawal_txs_client']
    user_id [name: 'idx_withdrawal_txs_user']
    status [name: 'idx_withdrawal_txs_status']
    created_at [name: 'idx_withdrawal_txs_created']
  }
  
  Note: 'Withdrawal transactions - user cashes out to bank/card or back to client balance'
}

// ============================================
// 10. AUDIT LOGS (Activity Tracking)
// ============================================
Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // Actor
  client_id uuid [ref: > client_organizations.id]
  user_id varchar(255)
  actor_type varchar(50) [not null, note: 'client | end_user | system | admin']
  
  // Action
  action varchar(100) [not null, note: 'client.registered | deposit.created | withdrawal.completed | vault.rebalanced | etc.']
  resource_type varchar(50) [note: 'client | deposit | withdrawal | allocation | vault']
  resource_id varchar(255)
  
  // Details
  description text
  metadata jsonb [note: 'Additional context data']
  
  // Request Info
  ip_address inet
  user_agent text
  
  // Timestamps
  created_at timestamptz [default: `now()`]
  
  indexes {
    client_id [name: 'idx_audit_logs_client']
    user_id [name: 'idx_audit_logs_user']
    action [name: 'idx_audit_logs_action']
    created_at [name: 'idx_audit_logs_created']
    (resource_type, resource_id) [name: 'idx_audit_logs_resource']
  }
  
  Note: 'Complete audit trail for all system activities'
}

// ============================================
// RELATIONSHIPS SUMMARY
// ============================================
/*
client_organizations (1) --< (many) end_users
client_organizations (1) --< (many) client_vaults
client_organizations (1) --- (1) client_balances
client_organizations (1) --< (many) defi_allocations
client_organizations (1) --< (many) deposit_transactions
client_organizations (1) --< (many) withdrawal_transactions
client_organizations (1) --< (many) audit_logs

end_users (1) --< (many) end_user_vaults

client_vaults (1) --< (many) defi_allocations

supported_defi_protocols (1) --< (many) defi_allocations

client_balances (1) --< (many) deposit_transactions

ALLOCATION FLOW:
1. Client creates vault for specific chain + token → client_vaults
2. System looks up supported protocols → supported_defi_protocols (filtered by chain)
3. System deploys funds based on strategy → defi_allocations
   - Links to client_vault_id (which defines chain + token)
   - Links to protocol_id (which has address_book for that chain)
   - Stores balance, percentage, APY per allocation
*/
